--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+board_build.partitions = min_spiffs.csv
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.2
