--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .pio
-.vscode/**/*
+.vscode
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
 secrets.h
+data
